Aligning the text with the column header for Issues on the Reader Welcome Gate screen (#2635)
* Fixing alignment for issues column on welcome-gate screen

--- a/app/assets/stylesheets/reader/_assignment_list.scss
+++ b/app/assets/stylesheets/reader/_assignment_list.scss
@@ -1,6 +1,6 @@
 .assignment-list {
   .issue-list {
-    padding-left: 15px;
+    padding-left: 0;
   }
 
   .issue-level {
